k8s/gateway-api/gateway-api-service.yaml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gateway-applications
  namespace: gateway-api-ns
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  # - name: http
  #   protocol: HTTP
  #   port: 80
  #   allowedRoutes:
  #     namespaces:
  #       from: All
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: rhuan-managed-cert
    allowedRoutes:
      namespaces:
        from: All
  addresses:
  - type: NamedAddress
    value: gke-ip-lb
